Fix login button alignment

--- a/src/containers/login-signup.css
+++ b/src/containers/login-signup.css
@@ -68,6 +68,11 @@
   height: 45px;
 }
 
+.account-btn {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 #newAccount {
   background-color: rgba(0, 0, 0, 0.1);
   border: 4px solid white;
